fixed contact heading alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,7 @@ h2 {
 
 .contact {
     display: flex;
-    padding: 18px;
+    padding: 18px 0;
     font-size: 28px;
     font-weight: bold;
 }
